_sass/custom.scss
// Custom CSS entries

/*// For references at the footer 
.csl-entry {
    display: list-item;
  }
*/

@import "fonts/style";
@import "fonts/font-classes";

.html-widget {
    margin: auto;
    margin-bottom: 0.5em;
}

// Overrides to theme CSS
p.caption {
  margin-bottom: 0.5em;
  color: $muted-text-color;
  font-family: $caption-font-family;
  font-size: $type-size-6;

  a {
    -webkit-transition: $global-transition;
    transition: $global-transition;

    &:hover {
      color: $link-color-hover;
    }
  }
}

.sidebar img {
  max-width: 150px;
  border-radius: 0%;
  
  @include breakpoint($large) {
    padding: 0px;
    border: 0px solid $border-color;
  }
}


/* Add drop case to the first letter of the first paragraph  */

.dropcase .page__content > p:first-of-type:first-letter  {

  //font-family:  serif;
  font-size: 3.2em; // 4em for no background
  font-weight: bold;
  color: $background-color;
  background: $primary-color;
  border-radius: 0.0625em;
  text-align: center;
  float: left;
  padding: 0.125em 0.125em 0.125em 0.125em;
  margin: -0.03em 0.125em 0em 0em; // 0.0625em 0.125em 0em 0em; for no background
}


/*// For the dt-html widget in R
.dataTables_length {
  label {
  display: inline-flex;
  }

  select {
    background-color: $lighter-gray;
  }
}

.dataTables_filter {
  label {
    display: inline-flex;
    }
  input[type="search"] {
    background-color: $lighter-gray;
    }
}
*/


/*// For the font size on the site
// https://github.com/mmistakes/minimal-mistakes/issues/1219#issuecomment-326809412
html {
    font-size: 14px; // originally 16px
    
    @include breakpoint($medium) {
        font-size: 16px; // originally 18px
    }

    @include breakpoint($large) {
        font-size: 18px; // originally 20px
    }

    @include breakpoint($x-large) {
        font-size: 22px; // originally 22px
    }
}

*/

